<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/step_list"
    android:name="com.rajsuvariya.bakingapp.ui.stepsList.StepListFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    app:layoutManager="android.support.v7.widget.LinearLayoutManager"
    tools:context=".ui.stepsList.StepListActivity"
    tools:listitem="@layout/item_step_list" />