<resources>
    <string name="app_name">Baking App</string>


    <!--App Message-->
    <string name="api_retry_error">Please retry!</string>
    <string name="api_default_error">Something wrong happened!</string>
    <string name="some_error">Some Error Occurred!</string>
    <string name="connection_error">Internet connection lost!</string>
    <string name="empty_pan">Please Enter your PAN No</string>
    <string name="invalid_pan">Please enter a valid PAN No</string>

    <string name="serving">Serving: %1$d</string>
    <string name="title_step_list">Steps</string>
    <string name="title_step_detail">Step Detail</string>
    <string name="ingredients">Ingredients</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
</resources>
